[gd_scene load_steps=2 format=3 uid="uid://c001jsdmum137"]

[ext_resource type="Script" uid="uid://cdm37ugh274u3" path="res://va_08.gd" id="1_ljhyw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ljhyw")

[node name="WelcomeLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 250.0
offset_right = 601.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 32
text = "Welcome to THE GAME!"

[node name="StartButton" type="Button" parent="."]
offset_left = 592.0
offset_top = 450.0
offset_right = 684.0
offset_bottom = 495.0

[node name="StartingLabel" type="Label" parent="."]
offset_left = 600.0
offset_top = 450.0
offset_right = 675.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="GameStartedLabel" type="Label" parent="."]
visible = false
offset_left = 500.0
offset_top = 350.0
offset_right = 757.0
offset_bottom = 395.0
theme_override_font_sizes/font_size = 32
text = "Game has begin!"
